Fix scrollbar size and font size

--- a/bin/application/application.css
+++ b/bin/application/application.css
@@ -2,3 +2,10 @@
 .text-area .content{
     -fx-background-color: transparent;
 }
+
+.scroll-pane .scroll-bar:horizontal {
+    -fx-pref-height: 20 ;
+}
+.scroll-pane .scroll-bar:vertical {
+    -fx-pref-width: 20 ;
+}
